# full-stack-take-home

./: README.md  README_FDE.md  api_output.txt  ls_remote_output.txt
.github/workflows/: cascade-sync.yml  ci.yml
backend/: .env.example  README.md  openapi.json  pyproject.toml
backend/scripts/: generate_openapi.py
backend/src/: app.py
backend/src/contracts/: router.py  schemas.py  service.py
data/: summary.json
data/generated_contracts/: contract1.txt  contract10.txt  contract2.txt  contract3.txt  contract4.txt  contract5.txt  contract6.txt  contract7.txt  contract8.txt  contract9.txt
frontend/: README.md  orval.config.ts  package-lock.json  package.json
frontend/src/api/: custom-instance.ts  generated.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
