[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright>=1.37.1", "ruff>=0.14.13"]

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]


[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src", "scripts"]
typeCheckingMode = "standard"
reportAny = true


[project.scripts]
generate-openapi = "scripts.generate_openapi:generate_spec"
